<resources>
    <string name="app_name">Guess Number</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_a_number">Please input a number(1-100)</string>
    <string name="guess">Guess</string>
    <string name="bigger">Bigger!!!</string>
    <string name="smaller">Smaller!!!</string>
    <string name="excellent">Excellent! The number is </string>
    <string name="you_got_it">You got it!!!</string>
    <string name="guess_result">Guess Result</string>
    <string name="ok">Ok</string>
    <string name="reset_game">Reset Game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="times">times</string>
    <string name="success">Success</string>
</resources>